# file_picker

./: Cargo.toml  README.md
examples/: picker_file.rs  picker_folder.rs
src/: lib.rs  spinners.rs
src/picker/: mod.rs  pick_types.rs
